# DFN3-OBS-PLUGIN

./: .gitignore  Build-And-Deploy.ps1  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Resolve-ObsSdk.ps1
.github/workflows/: release.yml
data/models/: README.md
scripts/: Bootstrap-DeepFilterAssets.ps1  Build-And-Deploy.ps1  Deploy-To-OBS.ps1  Resolve-ObsSdk.ps1
src/: df_runtime.cpp  df_runtime.hpp  dfn3_filter.cpp  dfn3_filter.hpp  plugin-main.cpp  ring_buffer.hpp
